<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    android:padding="16dp">
    <EditText
        android:id="@+id/title_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/test_notification_title"
        android:hint="@string/please_input_notification_title"/>
    <EditText
        android:id="@+id/content_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/please_input_notification_text"
        android:text="@string/test_notification_text"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">
        <TextView
            android:id="@+id/channel_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/channel_with_colon"/>
        <Spinner
            android:id="@+id/channel_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/channel_tv"/>
    </RelativeLayout>
    <TextView
        android:id="@+id/channel_prop_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"/>
    <!--notification background-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">
        <TextView
            android:id="@+id/notification_background_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/notification_background_with_colon"/>
        <Button
            android:id="@+id/choose_background_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_color"
            android:layout_marginStart="8dp"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/notification_background_tv"/>
    </RelativeLayout>
    <CheckBox
        android:id="@+id/message_style_ck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/show_message_style"/>
</LinearLayout>