<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="16dp">
    <!--channel name-->
    <EditText
        android:id="@+id/channel_name_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/please_input_channel_name"/>
    <!--description-->
    <EditText
        android:id="@+id/channel_description_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/please_input_channel_description"/>
    <!--importance-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">
        <TextView
            android:id="@+id/importance_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:text="@string/importance_with_colon"/>
        <Spinner
            android:id="@+id/importance_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/importance_tv"/>
    </RelativeLayout>
    <!--group-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">
        <TextView
            android:id="@+id/group_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:text="@string/channel_name_with_colon"/>
        <Spinner
            android:id="@+id/group_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/add_group_btn"
            android:layout_toEndOf="@+id/group_tv"
            android:layout_centerVertical="true"/>
        <Button
            android:id="@+id/add_group_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="8dp"
            android:layout_centerVertical="true"
            android:text="@string/add"/>
    </RelativeLayout>
    <!--light-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">
        <TextView
            android:id="@+id/light_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/light_with_colon"/>
        <Switch
            android:id="@+id/light_switch"
            android:layout_width="wrap_content"
            android:minWidth="64dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/light_tv"
            android:checked="true"/>
        <Button
            android:id="@+id/choose_light_color_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_color"
            android:layout_marginStart="8dp"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/light_switch"/>
    </RelativeLayout>
    <!--vibration-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">
        <TextView
            android:id="@+id/vibration_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/vibration_with_colon"/>
        <Switch
            android:id="@+id/vibration_switch"
            android:layout_width="wrap_content"
            android:minWidth="64dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/vibration_tv"
            android:checked="true"/>
    </RelativeLayout>
</LinearLayout>